more work on phylofusion