@@ -24,17 +24,18 @@ import jloda.fx.util.AllFileFilter;
 import jloda.fx.util.ProgramProperties;
 import jloda.fx.util.TextFileFilter;
 import jloda.fx.window.NotificationManager;
+import jloda.phylo.NewickIO;
 import jloda.util.FileUtils;
+import jloda.util.progress.ProgressSilent;
+import splitstree6.data.TaxaBlock;
+import splitstree6.data.TreesBlock;
 import splitstree6.io.FileLoader;
 import splitstree6.io.readers.trees.NewickReader;
+import splitstree6.io.readers.trees.NexusReader;
 import splitstree6.window.MainWindow;
 
-import java.io.BufferedWriter;
-import java.io.File;
-import java.io.FileWriter;
-import java.io.IOException;
+import java.io.*;
 import java.nio.file.Files;
-import java.util.stream.Collectors;
 
 /**
  * import multiple trees dialog
@@ -48,36 +49,56 @@ public class ImportMultipleTrees {
 	 */
 	public static void apply(MainWindow mainWindow) {
 		final var fileChooser = new FileChooser();
-		fileChooser.setTitle("Import Multiple Trees in Newick Format");
+		fileChooser.setTitle("Import Multiple Trees in Newick/Nexus Format");
 
 		final var previousDir = new File(ProgramProperties.get("TreeImportDirectory", ""));
 		if (previousDir.isDirectory()) {
 			fileChooser.setInitialDirectory(previousDir.getParentFile());
 		}
-		var newickExtensionFilter = new NewickReader().getExtensionFilter();
-		fileChooser.getExtensionFilters().addAll(TextFileFilter.getInstance(), newickExtensionFilter, AllFileFilter.getInstance());
+		var newickReader = new NewickReader();
+		var nexusReader = new NexusReader();
+
+		var newickExtensionFilter = newickReader.getExtensionFilter();
+		var nexusExtensionFilter = nexusReader.getExtensionFilter();
+		fileChooser.getExtensionFilters().addAll(TextFileFilter.getInstance(), newickExtensionFilter, nexusExtensionFilter, AllFileFilter.getInstance());
 		fileChooser.setSelectedExtensionFilter(newickExtensionFilter);
 		var files = fileChooser.showOpenMultipleDialog(mainWindow.getStage());
-		if (files != null && files.size() > 0) {
+		if (files != null && !files.isEmpty()) {
 			try {
 				var tmpFile = FileUtils.getUniqueFileName(System.getProperty("user.dir"), "Untitled", "tmp");
 				tmpFile.deleteOnExit();
-				var newickReader = new NewickReader();
 				var first = true;
 				try (var w = new BufferedWriter(new FileWriter(tmpFile))) {
 					for (var file : files) {
+						System.err.println(file.getName());
 						if (first) {
 							ProgramProperties.put("TreeImportDirectory", file.getParent());
 							first = false;
 						}
-
 						if (newickReader.accepts(file.getPath())) {
-							for (var line : Files.lines(file.toPath()).collect(Collectors.toList())) {
+							for (var line : Files.lines(file.toPath()).toList()) {
 								w.write(line);
 								w.newLine();
 							}
+						} else if (nexusReader.accepts(file.getPath())) {
+							var taxaBlock = new TaxaBlock();
+							var treesBlock = new TreesBlock();
+							var newickIO = new NewickIO();
+							nexusReader.read(new ProgressSilent(), file.getPath(), taxaBlock, treesBlock);
+							for (var tree : treesBlock.getTrees()) {
+								var format = new NewickIO.OutputFormat(tree.hasEdgeWeights(), false, tree.hasEdgeConfidences(), false, false);
+								newickIO.write(tree, w, format);
+								w.write(";\n");
+							}
 						} else
-							throw new IOException("File not in Newick format: " + file.getName());
+							throw new IOException("File not in Newick or Nexus format: " + file.getName());
+					}
+				}
+				if (false) {
+					try (var r = new BufferedReader(new FileReader(tmpFile.getPath()))) {
+						while (r.ready()) {
+							System.err.println(r.readLine());
+						}
 					}
 				}
 				FileLoader.apply(false, mainWindow, tmpFile.getPath(), ex -> {
@@ -85,6 +106,7 @@ public class ImportMultipleTrees {
 				});
 			} catch (IOException ex) {
 				NotificationManager.showError("Import trees failed: " + ex);
+
 			}
 		}
 	}
